--- a/index.html
+++ b/index.html
@@ -562,16 +562,15 @@
 
         <!-- Modelo 3D del engrane cónico -->
         <div style="text-align:center; margin: 20px 0;">
-            <model-viewer src="Imagenes/pinion_gear.glb"
-                alt="Modelo 3D de engrane cónico"
-                camera-controls
-                auto-rotate
-                auto-rotate-delay="2000"
-                interaction-prompt="auto"
-                style="width:100%; max-width:500px; height:400px; margin:0 auto; display:block; background:#f8f8f8; border-radius:10px;">
-                Tu navegador no soporta la visualización de modelos 3D.
-            </model-viewer>
-        </div>
+<model-viewer src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+    alt="Modelo 3D de prueba"
+    camera-controls
+    auto-rotate
+    auto-rotate-delay="2000"
+    interaction-prompt="auto"
+    style="width:100%; max-width:500px; height:400px; margin:0 auto; display:block; background:#f8f8f8; border-radius:10px;">
+    Tu navegador no soporta la visualización de modelos 3D.
+</model-viewer>
 
         <div style="text-align:center; margin: 20px 0;">
             <img src="Imagenes/engrane_conico.png" alt="Par de engranes cónicos"
