--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
         <h2>Introducción</h2>
 
         <p>
-            Los engranajes son elementos mecánicos fundamentales para la transmisión de movimiento y potencia entre
+            dsfvsafesLos engranajes son elementos mecánicos fundamentales para la transmisión de movimiento y potencia entre
             ejes en una amplia variedad de máquinas. Su función se basa en el acoplamiento de dientes con geometría
             precisa que permiten modificar velocidad, torque y dirección del giro. Gracias a su eficiencia y
             confiabilidad, los engranajes se emplean en transmisiones automotrices, maquinaria industrial, equipos de
@@ -1336,3 +1336,4 @@
 </body>
 
 </html>
+
