--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
             </tbody>
         </table>
 
-        <!-- ENGRANAJES CÓNICOS -->
+              <!-- ENGRANAJES CÓNICOS -->
         <h2 style="font-size: 22px; margin-top: 35px;">Engranajes cónicos</h2>
 
         <p>
@@ -558,12 +558,7 @@
             les permite cambiar la dirección del giro sin modificar la continuidad del movimiento.
         </p>
 
-        <div style="text-align:center; margin: 20px 0;">
-            <img src="Imagenes/engrane_conico.png" alt="Par de engranes cónicos"
-                style="max-width:60%; height:auto;">
-        </div>
-
-        <!-- ⚙️ MODELO 3D AGREGADO AQUÍ -->
+        <!-- ⚙️ MODELO 3D DEL ENGRANE CÓNICO -->
         <div style="text-align:center; margin: 25px 0;">
             <model-viewer
                 id="gearViewer"
@@ -1347,3 +1342,4 @@
 </body>
 
 </html>
+
