--- a/index.html
+++ b/index.html
@@ -777,43 +777,87 @@
         <p><strong>Respuesta:</strong> El paso helicoidal requerido para ajustar la máquina generadora es
             aproximadamente \(5.32 \text{ mm}\).</p>
 
-        <!-- MÉTODOS DE FABRICACIÓN DE ENGRANES -->
+                <!-- MÉTODOS DE FABRICACIÓN DE ENGRANES -->
         <h2 style="font-size: 22px; margin-top: 35px;">Métodos de fabricación más utilizados</h2>
 
         <p>
             La fabricación de engranes requiere procesos que permitan generar perfiles precisos y relaciones de
-            transmisión exactas. Los métodos utilizados dependen del tipo de engrane, la precisión requerida, el volumen
-            de producción y la disponibilidad de maquinaria. En engranes cónicos y helicoidales se emplean principalmente
-            procesos de fresado por forma, procesos generadores especializados y rectificado, especialmente cuando se
-            requieren tolerancias estrechas.
+            transmisión exactas. Los métodos utilizados dependen del tipo de engrane, la precisión requerida,
+            el volumen de producción y la disponibilidad de maquinaria. En engranes cónicos y helicoidales se emplean
+            principalmente procesos de fresado por forma, procesos generadores especializados y rectificado,
+            especialmente cuando se requieren tolerancias estrechas.
         </p>
 
-        <table class="tabla-simple">
-            <thead>
-                <tr>
-                    <th>Método</th>
-                    <th>Descripción</th>
-                    <th>Características</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><strong>Fresado con cabezal divisor</strong></td>
-                    <td>Se corta cada legítimo diente por separado utilizando una fresa.</td>
-                    <td>Apto para producción baja o prototipos.</td>
-                </tr>
-                <tr>
-                    <td><strong>Maquinado generador (tipo Gleason)</strong></td>
-                    <td>La herramienta y la pieza giran de manera sincronizada.</td>
-                    <td>Permite obtener perfiles conjugados con mayor precisión.</td>
-                </tr>
-                <tr>
-                    <td><strong>Rectificado</strong></td>
-                    <td>Se emplean muelas abrasivas para ajustar el perfil final.</td>
-                    <td>Utilizado cuando se requieren tolerancias estrechas.</td>
-                </tr>
-            </tbody>
-        </table>
+        <h3 style="margin-top:25px;">1. Fresado</h3>
+
+        <p>
+            En este método, el perfil del diente se obtiene mediante una herramienta cuya geometría
+            corresponde al perfil transversal del diente. Cada diente se corta de manera individual utilizando
+            un cabezal divisor para posicionar la pieza de acuerdo con el número de dientes requerido.
+        </p>
+
+        <p><strong>Características técnicas:</strong></p>
+        <ul style="font-size:15px;">
+            <li>El espaciado se controla mediante división mecánica (relación 40:1 u otras).</li>
+            <li>Se necesita seleccionar una herramienta con el perfil correspondiente al módulo.</li>
+            <li>Adecuado para producción baja o fabricación por pieza.</li>
+        </ul>
+
+        <p>
+            <strong>Aplicaciones:</strong> engranes cónicos rectos, prototipos, reparaciones y piezas individuales.
+        </p>
+
+        <!-- A PARTIR DE AQUÍ SE MANTIENEN TUS MÉTODOS 2, 3 Y 4 COMO YA LOS TENÍAS -->
+        <h3 style="margin-top:25px;">2. Maquinado generador para engranes cónicos (sistemas tipo Gleason o similares)</h3>
+
+        <p>
+            Los engranes cónicos espirales e hipoides se fabrican mediante maquinaria especializada que coordina la
+            rotación de la herramienta y la pieza para generar el perfil de manera cinemática.
+        </p>
+
+        <p><strong>Características técnicas:</strong></p>
+        <ul style="font-size:15px;">
+            <li>El perfil se obtiene mediante generación, no por forma directa.</li>
+            <li>El ángulo de espiral, profundidad del diente y relación de transmisión se controlan mediante el ajuste
+                del cabezal.</li>
+            <li>Requiere máquinas específicas para engranes cónicos espirales o hipoides.</li>
+        </ul>
+        <p><strong>Aplicaciones:</strong> engranes para diferenciales automotrices y transmisiones angulares con
+            requisitos específicos de geometría.</p>
+
+        <h3 style="margin-top:25px;">3. Fresado helicoidal sincronizado</h3>
+
+        <p>
+            En este proceso, el diente helicoidal se genera sincronizando la rotación del husillo con el avance
+            longitudinal mediante un tren de engranes. La herramienta utilizada es una herramienta de forma, pero la
+            inclinación de la hélice se obtiene mediante la sincronización mecánica.
+        </p>
+
+        <p><strong>Características técnicas:</strong></p>
+        <ul style="font-size:15px;">
+            <li>El ángulo de hélice depende del ajuste del tren de engranes.</li>
+            <li>No requiere maquinaria generadora especializada.</li>
+            <li>Adecuado para producción baja o talleres de maquinado general.</li>
+        </ul>
+        <p><strong>Aplicaciones:</strong> engranes helicoidales de baja producción, prototipos y fabricación bajo
+            pedido.</p>
+
+        <h3 style="margin-top:25px;">4. Rectificado de engranes</h3>
+
+        <p>
+            El rectificado se utiliza para engranes que requieren tolerancias estrechas o control de desviaciones de
+            perfil. Se emplean muelas abrasivas con la geometría adecuada al tipo de engrane.
+        </p>
+
+        <p><strong>Características técnicas:</strong></p>
+        <ul style="font-size:15px;">
+            <li>Corrige errores residuales del proceso de corte.</li>
+            <li>Permite alcanzar grados de precisión según normas AGMA o ISO.</li>
+            <li>Controla problemas como error de paso, error de perfil y error de línea de acción.</li>
+        </ul>
+        <p><strong>Aplicaciones:</strong> engranes de transmisiones industriales, cajas automotrices y maquinaria de
+            alta precisión.</p>
+
         <h3 style="margin-top:25px;">2. Maquinado generador para engranes cónicos (sistemas tipo Gleason o similares)</h3>
 
         <p>
@@ -1362,3 +1406,4 @@
 </body>
 
 </html>
+
