--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
         </p>
 
         <div style="text-align:center; margin: 20px 0;">
-            <img src="Imagenes/superficie_primitiva_conico.png" alt="Superficie primitiva engrane cónico"
+            <img src="Imagenes/primitiva.png" alt="Superficie primitiva engrane cónico"
                 style="max-width:60%; height:auto;">
         </div>
 
@@ -1406,4 +1406,5 @@
 </body>
 
 </html>
+
 
