--- a/index.html
+++ b/index.html
@@ -428,16 +428,66 @@
         <a href="#fuentes">Fuentes</a>
     </nav>
 
-    <!-- -------------------- HOME/BANNER -------------------- -->
-    <section id="home">
-        <div class="hero-banner">
-            <div class="hero-text">
-                <h1>Engranes cónicos y helicoidales</h1>
-                <h2>Manufactura 2</h2>
-                <h3>Materiales y Manufactura</h3>
-            </div>
+<!-- -------------------- HOME/BANNER -------------------- -->
+<section id="home">
+    <div class="hero-banner">
+        <div class="hero-text mejor-titulo">
+            <h1>Engranes cónicos y helicoidales</h1>
+            <h2>Manufactura 2</h2>
+            <h3>Materiales y Manufactura</h3>
         </div>
-    </section>
+    </div>
+</section>
+
+<style>
+    /* Mejora visual del texto del banner */
+    .mejor-titulo h1 {
+        font-size: 55px !important;
+        font-weight: 800 !important;
+        color: white !important;
+        text-shadow: 0px 4px 10px rgba(0,0,0,0.45);
+        letter-spacing: 1px;
+        margin-bottom: 10px;
+    }
+
+    .mejor-titulo h2 {
+        font-size: 30px !important;
+        font-weight: 700 !important;
+        color: #1EA7FF !important;
+        text-shadow: 0px 3px 8px rgba(0,0,0,0.5);
+        margin: 0;
+    }
+
+    .mejor-titulo h3 {
+        font-size: 24px !important;
+        font-weight: 600 !important;
+        color: #ff7b25 !important;
+        text-shadow: 0px 3px 8px rgba(0,0,0,0.5);
+        margin-top: 8px;
+    }
+
+    .hero-banner {
+        position: relative;
+    }
+
+    /* Optimizar lectura con un degradado encima de la imagen */
+    .hero-banner::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(to right, rgba(0,0,0,0.55), rgba(0,0,0,0.25), rgba(0,0,0,0));
+        z-index: 1;
+    }
+
+    .hero-text {
+        position: relative;
+        z-index: 2;
+    }
+</style>
+
 
     <!-- -------------------- INTRODUCCIÓN -------------------- -->
     <section id="introduccion">
@@ -1406,5 +1456,6 @@
 </body>
 
 </html>
+
 
 
