--- a/index.html
+++ b/index.html
@@ -607,10 +607,6 @@
             auto-rotate-delay="2000" interaction-prompt="auto" style="width:100%; height:400px; margin:20px 0;">
         </model-viewer>
 
-        <div style="text-align:center; margin: 20px 0;">
-            <img src="Imagenes/engrane_conico.png" alt="Par de engranes cónicos" style="max-width:60%; height:auto;">
-        </div>
-
         <!-- GEOMETRÍA FUNDAMENTAL CÓNICOS -->
         <h2 style="font-size: 22px; margin-top: 35px;">Geometría fundamental de los engranes cónicos</h2>
 
@@ -624,7 +620,7 @@
         </p>
 
         <div style="text-align:center; margin: 20px 0;">
-            <img src="Imagenes/superficie_primitiva_conico.png" alt="Superficie primitiva engrane cónico"
+            <img src="Imagenes/primitiva.png" alt="Superficie primitiva engrane cónico"
                 style="max-width:35%; height:auto;">
         </div>
 
@@ -1367,3 +1363,4 @@
 </body>
 
 </html>
+
