--- a/index.html
+++ b/index.html
@@ -65,41 +65,66 @@
             background: var(--rojo-linea);
         }
 
-        /* -------------------- BANNER -------------------- */
-        .hero-banner {
-            width: 100%;
-            height: 280px;
-            background-image: url(Imagenes/layer.png);
-            background-size: cover;
-            background-position: center;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-        }
+<!-- -------------------- HOME/BANNER -------------------- -->
+<section id="home">
+    <div class="hero-banner">
+        <div class="hero-text mejor-titulo">
+            <h1>Engranes cónicos y helicoidales</h1>
+            <h2>Manufactura 2</h2>
+            <h3>Materiales y Manufactura</h3>
+        </div>
+    </div>
+</section>
 
-        .hero-text {
-            color: black;
-            text-align: center;
-        }
+<style>
+    /* Mejora visual del texto del banner */
+    .mejor-titulo h1 {
+        font-size: 55px !important;
+        font-weight: 800 !important;
+        color: white !important;
+        text-shadow: 0px 4px 10px rgba(0,0,0,0.45);
+        letter-spacing: 1px;
+        margin-bottom: 10px;
+    }
 
-        .hero-text h1 {
-            margin: 0;
-            font-size: 45px;
-            font-weight: 700;
-        }
+    .mejor-titulo h2 {
+        font-size: 30px !important;
+        font-weight: 700 !important;
+        color: #1EA7FF !important;
+        text-shadow: 0px 3px 8px rgba(0,0,0,0.5);
+        margin: 0;
+    }
 
-        .hero-text h2 {
-            margin: 5px 0;
-            color: var(--azul-sub);
-            font-size: 24px;
-        }
+    .mejor-titulo h3 {
+        font-size: 24px !important;
+        font-weight: 600 !important;
+        color: #ff7b25 !important;
+        text-shadow: 0px 3px 8px rgba(0,0,0,0.5);
+        margin-top: 8px;
+    }
 
-        .hero-text h3 {
-            margin-top: 5px;
-            color: var(--naranja);
-            font-size: 20px;
-        }
+    .hero-banner {
+        position: relative;
+    }
+
+    /* Optimizar lectura con un degradado encima de la imagen */
+    .hero-banner::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(to right, rgba(0,0,0,0.55), rgba(0,0,0,0.25), rgba(0,0,0,0));
+        z-index: 1;
+    }
+
+    .hero-text {
+        position: relative;
+        z-index: 2;
+    }
+</style>
+
 
         /* -------------------- SECCIONES -------------------- */
         section {
@@ -1383,5 +1408,6 @@
 </body>
 
 </html>
+
 
 
