--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
 
 <div style="text-align:center; margin: 20px 0;">
     <div class="img-ref-wrapper">
-        <img src="Imagenes/superficie_primitiva_conico.png"
+        <img src="Imagenes/primitiva.png"
              alt="Superficie primitiva engrane cónico"
              style="max-width:35%; height:auto;">
         <div class="carrusel-tooltip">
@@ -1408,6 +1408,7 @@
 </body>
 
 </html>
+
 
 
 
