--- a/index.html
+++ b/index.html
@@ -681,9 +681,6 @@
                 shadow-intensity="0.6"
                 style="width: 100%; height: 420px; background:#f7f7f7; border-radius:16px;">
             </model-viewer>
-            <p class="nota-3d">
-                Desliza, rota y acerca el modelo para observar la geometría cónica.
-            </p>
         </div>
 
         <!-- GEOMETRÍA FUNDAMENTAL CÓNICOS -->
@@ -811,9 +808,6 @@
                 shadow-intensity="0.6"
                 style="width: 100%; height: 420px; background:#f7f7f7; border-radius:16px;">
             </model-viewer>
-            <p class="nota-3d">
-                Explora el engrane helicoidal y observa la inclinación de los dientes.
-            </p>
         </div>
 
         <!-- GEOMETRÍA HELICOIDALES -->
@@ -1045,7 +1039,7 @@
             la posición de montaje y el ajuste axial dentro del mecanismo.
         </p>
 
-        <p><strong>Tarea:</strong> Calcule el ángulo primitivo \(\theta\) y documente el procedimiento de obtención
+        <p>Calcule el ángulo primitivo \(\theta\) y documente el procedimiento de obtención
             empleando la relación geométrica correspondiente.</p>
 
         <p><strong>Solución:</strong></p>
@@ -1087,7 +1081,7 @@
             que recorrerá el diente a lo largo del eje.
         </p>
 
-        <p><strong>Tarea:</strong> Calcule el paso helicoidal \(P_h\) y registre el valor requerido para configurar el
+        <p>Calcule el paso helicoidal \(P_h\) y registre el valor requerido para configurar el
             desplazamiento longitudinal del equipo.</p>
 
         <p>La relación entre el paso circular y el paso helicoidal es:</p>
@@ -1462,3 +1456,4 @@
 </body>
 
 </html>
+
