--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
         </ul>
         <p><strong>Aplicaciones:</strong> engranes cónicos rectos, prototipos, reparaciones y piezas individuales.</p>
 
-        <h3 style="margin-top:25px;">2. Maquinado generador para engranes cónicos (sistemas tipo Gleason o similares)</h3>
+        <h3 style="margin-top:25px;">2. Maquinado generador para engranes cónicos</h3>
 
         <p>
             Los engranes cónicos espirales e hipoides se fabrican mediante maquinaria especializada que coordina la
@@ -1507,3 +1507,4 @@
 </body>
 
 </html>
+
